# rsna2024

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  run.sh
config/: config1.yaml  config1_backup.yaml  config2.yaml  config3.yaml  config3_backup.yaml  config4.yaml  config5.yaml  config6.yaml  config7.yaml  configmagic1.yaml  configmagic2.yaml  configmagic3.yaml  densenet201_spinal.yaml  doubletdcnnunetpreloadzoom_foraminal.yaml  fused_tdcnn_level.yaml  segmentation.yaml  segmentation_spinal_instance.yaml  tdcnn_instance_labels.yaml  tdcnn_level_axialt2.yaml  tdcnn_level_sagittalt1.yaml  tdcnn_level_sagittalt2.yaml  tdcnn_level_side_foraminal.yaml  tdcnn_level_side_subarticular.yaml  tdcnninstance_sagittalt2.yaml  tdcnnunetpreloadzoom.yaml  tdcnnunetpreloadzoom_spinal.yaml  unet_segment_foraminal.yaml  unet_segment_spinal.yaml  unetpreload.yaml  unetpreloadzoom_segment.yaml  unetpreloadzoom_spinal.yaml
config/adjusted_files/: train_clean_study_ids_20240905.csv  train_clean_study_ids_20240926.csv  train_stratums.csv  train_stratums_adjusted_20240930.csv  train_stratums_adjusted_20240930_1.csv
rsna2024/: __init__.py  run.py
rsna2024/datasets/: __init__.py  augmentations.py  dicom_load.py  factory.py  full_level.py  level_cubes.py  segmentation_single_image.py  single_description.py
rsna2024/loss_functions/: __init__.py  heatmap.py  mixed.py  official.py  severe.py  weighted_crossentropy.py
rsna2024/models/: __init__.py  conv2p1d.py  conv3d.py  full_level_tdcnn.py  lstmcnn.py  magic_models.py  sam.py  tdcnn.py  unet.py  vision2d.py
scripts/: rsna2024.py
(+9 files in other folders)
